lib/src/linux.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:window_toolbox/linux')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>()
external void cw_gtk_window_remove_decorations(
  ffi.Pointer<ffi.Void> gtk_window,
  ffi.Pointer<ffi.Void> fl_view,
);

@ffi.Native<ffi.Void Function()>()
external void cw_init_event_hooks_if_needed();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)>()
external void cw_window_begin_move_drag(
  ffi.Pointer<ffi.Void> gtk_window,
  int x,
  int y,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.UnsignedInt, ffi.Int, ffi.Int)
>(symbol: 'cw_window_begin_resize_drag')
external void _cw_window_begin_resize_drag(
  ffi.Pointer<ffi.Void> gtk_window,
  int edge,
  int x,
  int y,
);

void cw_window_begin_resize_drag(
  ffi.Pointer<ffi.Void> gtk_window,
  cw_window_edge_t edge,
  int x,
  int y,
) => _cw_window_begin_resize_drag(
  gtk_window,
  edge.value,
  x,
  y,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int, ffi.Int, ffi.Int)
>()
external void cw_window_set_shadow_width(
  ffi.Pointer<ffi.Void> gtk_window,
  int top,
  int left,
  int bottom,
  int right,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> cw_wrl_get_xdg_token();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_delegate_config_t)>()
external void cw_gtk_window_init_delegate(
  ffi.Pointer<ffi.Void> gtk_window,
  cw_delegate_config_t config,
);

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_WITHDRAWN;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_ICONIFIED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_MAXIMIZED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_STICKY;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_FULLSCREEN;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_ABOVE;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_BELOW;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_FOCUSED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_TILED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_TOP_TILED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_TOP_RESIZABLE;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_RIGHT_TILED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_RIGHT_RESIZABLE;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_BOTTOM_TILED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_BOTTOM_RESIZABLE;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_LEFT_TILED;

@ffi.Native<ffi.Int>()
external final int CW_WINDOW_STATE_LEFT_RESIZABLE;

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int cw_window_get_state(
  ffi.Pointer<ffi.Void> gtk_window,
);

enum cw_window_edge_t {
  CW_WINDOW_EDGE_NORTH_WEST(0),
  CW_WINDOW_EDGE_NORTH(1),
  CW_WINDOW_EDGE_NORTH_EAST(2),
  CW_WINDOW_EDGE_WEST(3),
  CW_WINDOW_EDGE_EAST(4),
  CW_WINDOW_EDGE_SOUTH_WEST(5),
  CW_WINDOW_EDGE_SOUTH(6),
  CW_WINDOW_EDGE_SOUTH_EAST(7);

  final int value;
  const cw_window_edge_t(this.value);

  static cw_window_edge_t fromValue(int value) => switch (value) {
    0 => CW_WINDOW_EDGE_NORTH_WEST,
    1 => CW_WINDOW_EDGE_NORTH,
    2 => CW_WINDOW_EDGE_NORTH_EAST,
    3 => CW_WINDOW_EDGE_WEST,
    4 => CW_WINDOW_EDGE_EAST,
    5 => CW_WINDOW_EDGE_SOUTH_WEST,
    6 => CW_WINDOW_EDGE_SOUTH,
    7 => CW_WINDOW_EDGE_SOUTH_EAST,
    _ => throw ArgumentError('Unknown value for cw_window_edge_t: $value'),
  };
}

final class cw_delegate_config_t extends ffi.Struct {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_close;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_state_changed;
}
